--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,4 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-git remote add origin https://github.com/<>/<repo-name>.git
+git remote add origin https://github.com/<asaditya25>/<adbocate-website>.git
