Fix: ensure client/build is committed and .gitignore updated for Render deployment

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ client/node_modules/
 server/node_modules/
 
 # Production builds
-client/build/
+# client/build/
 client/dist/
 
 # Environment variables
