--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "morgan": "^1.10.0",
     "nodemailer": "^6.10.1"
   },
   "devDependencies": {
