--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "cd server && npm start",
     "dev": "concurrently \"cd client && npm start\" \"cd server && npm run dev\"",
-    "build": "cd client && npm install && npm run build",
-    "install:client": "cd client && npm install",
-    "install:server": "cd server && npm install",
+    "build": "cd client && npm ci && npm run build",
+    "install:client": "cd client && npm ci",
+    "install:server": "cd server && npm ci",
     "install:all": "npm run install:client && npm run install:server",
-    "render-postbuild": "npm run install:all && npm run build"
+    "render-postbuild": "npm run install:all && npm run build && node verify-build.js"
   },
   "engines": {
     "node": ">=18.0.0",
